missed Wigan & Leigh replacements

--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -8,7 +8,7 @@ header_nav_getinvolved: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong>Get Involved</strong>'
+  header__hero__text='Real Change in Rochdale <strong>Get Involved</strong>'
 }}
 
 <div id="main">
