--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -8,14 +8,14 @@ header_nav_howitworks: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong>How it Works</strong>'
+  header__hero__text='Real Change in Rochdale <strong>How it Works</strong>'
 }}
 
 <div id="main">
   <div class="section">
     <div class="container">
       <div class="content text-center">
-        <p class="body-lg"><strong>Real change is a fund for Wigan &amp; Leigh that pays for items that local people need to get off and stay off the street.</strong></p>
+        <p class="body-lg"><strong>Real change is a fund for Rochdale that pays for items that local people need to get off and stay off the street.</strong></p>
         <a class="button button-primary d-block d-sm-inline-block mb-sm mt-md" href="#">Donate and make a real change</a>
       </div>
     </div>
