--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -8,7 +8,7 @@ header_nav_howtoapply: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong> How to Apply</strong>'
+  header__hero__text='Real Change in Rochdale <strong> How to Apply</strong>'
 }}
 
 <div id="main">
