--- a/templates/src/_components/footer/footer.hbs
+++ b/templates/src/_components/footer/footer.hbs
@@ -27,7 +27,7 @@
         <div class="footer-brand-inner">
           <img alt="Real Change" class="footer-brand-logo" height="63" src="assets/real-change-logo-x2.png" width="55">
         </div>
-        <div class="footer-brand-subtitle">Wigan &amp; Leigh</div>
+        <div class="footer-brand-subtitle">Rochdale</div>
       </div>
       {{/if}}
     </div>{{/if}}
