rochdale to oldham

--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -33,7 +33,7 @@ layout: default
     <div class="container">
       <div class="content">
         <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Rochdale and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <p>If your organisation provides a service to support people who are homeless in Oldham and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
       </div>
     </div>
   </section>
