--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -8,7 +8,7 @@ header_nav_home: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='<span>Help make</span> a Real Change in <strong>Rochdale</strong>'
+  header__hero__text='<span>Help make</span> a Real Change in <strong>Oldham</strong>'
 }}
 
 <div id="main">
@@ -18,7 +18,7 @@ header_nav_home: true
         <div class="boxed-inner">
           <h2>What is Real Change?</h2>
           <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
-          <p>If everyone who lives, works or visits Rochdale donates, together we can make a Real Change!</p>
+          <p>If everyone who lives, works or visits Oldham donates, together we can make a Real Change!</p>
           <a class="button d-block" href="#">Donate and make a real change</a>
         </div>
         <div class="boxed-media aspect aspect-6by5">
@@ -36,7 +36,7 @@ header_nav_home: true
         <div class="boxed edges bg-rc-spark home-intro-apply">
           <div class="boxed-inner">
             <h2>How can you apply?</h2>
-            <p>If your organisation provides a service to support people who are homeless in Rochdale and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
+            <p>If your organisation provides a service to support people who are homeless in Oldham and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@ header_nav_home: true
   <section class="section home-stories bg-rc-sunny edge edge-top edge-rc-sunny-top">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title">56 people helped so far in Rochdale</h2>
+        <h2 class="h1 home-stories-title">56 people helped so far in Oldham</h2>
       </div>
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
@@ -82,8 +82,8 @@ header_nav_home: true
         </div>
       </div>
       <div class="home-partners-body">
-        <p><strong>If you are sleeping rough in Rochdale and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
-        <p>Real Change Rochdale currently works in partnership with the following organisations:</p>
+        <p><strong>If you are sleeping rough in Oldham and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
+        <p>Real Change Oldham currently works in partnership with the following organisations:</p>
         <ul class="list-flex font-weight-bold">
           <li><a href="#" target="_blank">Barnabus</a></li>
           <li><a href="#" target="_blank">Big Issue North</a></li>
