--- a/hugo/layouts/partials/footer.html
+++ b/hugo/layouts/partials/footer.html
@@ -13,7 +13,7 @@
         <div class="footer-brand-inner">
           <img alt="Real Change" class="footer-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
         </div>
-        <div class="footer-brand-subtitle">Rochdale</div>
+        <div class="footer-brand-subtitle">Oldham</div>
       </div>
     </div>
     <div class="footer-info" role="contentinfo">
