--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -7,7 +7,7 @@
           <div class="header-brand-inner bg-rc-moss">
             <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
           </div>
-          <div class="header-brand-subtitle">Rochdale</div>
+          <div class="header-brand-subtitle">Oldham</div>
         </a>
       </div>
       <nav class="header-body" role="navigation" aria-labelledby="nav-site">
