--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -1,13 +1,13 @@
-<header class="header decor decor-bottom decor-rc-sunny{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
+<header class="header decor decor-bottom decor-rc-flame{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
   <a class="header-skip" href="#main">Skip to main content</a>
-  <div class="header-wrap">
+  <div class="header-wrap bg-rc-flame">
     <div class="header-inner">
       <div class="header-brand">
         <a href="/">
-          <div class="header-brand-inner bg-rc-candy">
+          <div class="header-brand-inner bg-rc-dive">
             <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
           </div>
-          <div class="header-brand-subtitle">Oldham</div>
+          <div class="header-brand-subtitle">Guildford</div>
         </a>
       </div>
       <nav class="header-body" role="navigation" aria-labelledby="nav-site">
