--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -46,7 +46,7 @@
   }
 
   &::before {
-    background-color: $color-rc-candy;
+    background-color: $color-rc-dive;
     bottom: 0;
     content: "";
     display: block;
