--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -13,7 +13,7 @@
   </div>
 
   {{ if .Params.section }}
-  <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+  <section class="section bg-rc-flame pre-footer-withcityscape edge edge-top edge-rc-flame-top">
     <div class="container">
       <div class="content">
         <h2>{{ .Params.section.heading }}</h2>
