--- a/hugo/layouts/stories/stories.html
+++ b/hugo/layouts/stories/stories.html
@@ -15,7 +15,7 @@
   {{ end }}
   {{ end }}
 
-  <section class="section home-stories bg-rc-sunny edge edge-top edge-rc-sunny-top">
+  <section class="section home-stories bg-rc-flame edge edge-top edge-rc-flame-top">
     <div class="container">
       <div class="home-stories-header">
         <h2 class="h1 home-stories-title">
