--- a/templates/src/_components/header/header.hbs
+++ b/templates/src/_components/header/header.hbs
@@ -7,7 +7,7 @@
           <div class="header-brand-inner bg-rc-moss">
             <img alt="Real Change" class="header-brand-logo" height="63" src="assets/real-change-logo-x2.png" width="55">
           </div>
-          <div class="header-brand-subtitle">Oldham</div>
+          <div class="header-brand-subtitle">Guildford</div>
         </a>
       </div>
       {{#if header__nav}}
