--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -8,7 +8,7 @@ header_nav_howtoapply: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Oldham <strong> How to Apply</strong>'
+  header__hero__text='Real Change in Guildford <strong> How to Apply</strong>'
 }}
 
 <div id="main">
@@ -45,7 +45,7 @@ header_nav_howtoapply: true
     <div class="container">
       <div class="content">
         <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Oldham and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <p>If your organisation provides a service to support people who are homeless in Guildford and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
       </div>
     </div>
   </section>
