--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -8,7 +8,7 @@ header_nav_casestudies: true
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Oldham <strong>Stories</strong>'
+  header__hero__text='Real Change in Guildford <strong>Stories</strong>'
 }}
 
 <div id="main">
@@ -23,7 +23,7 @@ header_nav_casestudies: true
   <section class="section home-stories bg-rc-sunny edge edge-top edge-rc-sunny-top">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title">56 people helped so far in Oldham</h2>
+        <h2 class="h1 home-stories-title">56 people helped so far in Guildford</h2>
       </div>
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
