updated guildford colours (#5)

--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -14,7 +14,7 @@
 
   <section class="section home-intro">
     <div class="container">
-      <div class="boxed edges bg-rc-flame">
+      <div class="boxed edges bg-rc-spark">
         <div class="boxed-inner">
           <h2>{{ .Params.champions.title }}</h2>
           {{ $championsBodyMarkdown := .Params.champions.body | markdownify }}
@@ -25,7 +25,7 @@
   </section>
 
   {{ if .Params.section }}
-  <section class="section bg-rc-flame pre-footer-withcityscape edge edge-top edge-rc-flame-top">
+  <section class="section bg-rc-spark pre-footer-withcityscape edge edge-top edge-rc-spark-top">
     <div class="container">
       <div class="content">
         <h2>{{ .Params.section.heading }}</h2>
