--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -1,10 +1,10 @@
-<header class="header decor decor-bottom decor-rc-flame{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
+<header class="header decor decor-bottom decor-rc-spark{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
   <a class="header-skip" href="#main">Skip to main content</a>
-  <div class="header-wrap bg-rc-flame">
+  <div class="header-wrap bg-rc-spark">
     <div class="header-inner">
       <div class="header-brand">
         <a href="/">
-          <div class="header-brand-inner bg-rc-dive">
+          <div class="header-brand-inner bg-rc-dream">
             <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
           </div>
           <div class="header-brand-subtitle">Guildford</div>
