real change guildford updates (#7)

--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -307,6 +307,8 @@ p + .button { margin-top: 1rem; }
 
 .decor-rc-sunny.decor-bottom::after { background-image: url(assets/decor-rc-sunny.png); }
 
+.decor-rc-flame.decor-bottom::after { background-image: url(assets/decor-rc-flame.png);  }
+
 .edge { position: relative; }
 
 .edge-bottom::after, .edge-top::before { content: ''; display: block; height: 1rem; }
@@ -670,6 +672,14 @@ p + .button { margin-top: 1rem; }
 .getinvolved-section-media { margin-top: 1rem; }
 
 @media (min-width: 576px) { .getinvolved-section-media { margin-left: 1em; margin-top: 0; max-width: 320px; } }
+
+.getinvolved-bottom { margin-top: 24px; }
+
+@media (max-width: 768px) { .getinvolved-bottom { margin-top: 16px; } }
+
+.getinvolved-events { margin-top: 72px; }
+
+@media (max-width: 768px) { .getinvolved-events { margin-top: 40px; } }
 
 .bg-black { background-color: #000000 !important; }
 
