--- a/templates/src/_components/decor/_decor.scss
+++ b/templates/src/_components/decor/_decor.scss
@@ -26,3 +26,8 @@
     background-image: url(assets/decor-rc-sunny.png);
   }
 }
+.decor-rc-flame {
+  &.decor-bottom::after {
+    background-image: url(assets/decor-rc-flame.png);
+  }
+}
