--- a/hugo/layouts/events/events.html
+++ b/hugo/layouts/events/events.html
@@ -15,7 +15,7 @@
   {{ end }}
   {{ end }}
 
-  <section class="section home-stories bg-rc-flame edge edge-top edge-rc-flame-top">
+  <section class="section home-stories bg-rc-spark edge edge-top edge-rc-spark-top">
     <div class="container">
       <div class="home-stories-header">
         <h2 class="h1 home-stories-title">
@@ -25,11 +25,11 @@
       <div class="home-stories-body">
   {{ range (where .Site.RegularPages.ByDate.Reverse "Section" "events") }}
   <div class="card-story card-stroy-witharrow">
-    <h3 class="card-story-title">{{ .Params.summary.heading }}</h3>
-    <div class="card-story-image aspect aspect-5by2 bg-rc-flame">
-      <img alt="" src="{{ .Params.summary.image }}">
+    <h3 class="card-story-title">{{ .Params.rename.heading }}</h3>
+    <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
+      <img alt="" src="{{ .Params.rename.image }}">
     </div>
-    <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.summary.text }}</a>
+    <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.rename.text }}</a>
   </div>
   {{ end }}
       </div>
