--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -14,7 +14,7 @@
 
   <section class="home-intro pre-footer-withcityscape">
     <div class="container">
-      <div class="boxed edges bg-rc-flame">
+      <div class="boxed edges bg-rc-spark">
         <div class="boxed-inner">
           <h2>{{ .Params.howYou.heading }}</h2>
           <div class="getinvolved-section-body">  
@@ -25,7 +25,7 @@
         </div>
       </div>  
       <div class="home-intro-split">
-        <div class="boxed edges bg-rc-dive">
+        <div class="boxed edges bg-rc-dream">
           <div class="boxed-inner">
             <h2>{{ .Params.takePart.heading }}</h2>
             {{ $takePartBodyMarkdown := .Params.takePart.body | markdownify }}
@@ -48,7 +48,7 @@
               {{ if not ( strings.Contains $whoBodyMarkdown "<p>" ) }}<p>{{ $whoBodyMarkdown }}</p>{{ else }}{{ $whoBodyMarkdown }}{{ end }}
           </div>
         </div>
-        <div class="boxed edges bg-rc-flame">
+        <div class="boxed edges bg-rc-spark">
           <div class="boxed-inner">
                 <h2>{{ .Params.playARole.heading }}</h2>
                 {{ $howBodyMarkdown := .Params.playARole.body | markdownify }}
@@ -61,7 +61,7 @@
 
 
 <!-- {{ with .Site.GetPage "section" "events" }}{{ if eq .Params.showonhome true }}
-<section class="section getinvolved-events bg-rc-flame edge edge-top edge-rc-flame-top">
+<section class="section getinvolved-events bg-rc-spark edge edge-top edge-rc-spark-top">
   <div class="container">
     <div class="home-stories-header">
       <h2 class="h1 home-stories-title">
@@ -71,11 +71,11 @@
     <div class="home-stories-body">
       {{ range first 2 (where .Site.RegularPages.ByDate.Reverse "Section" "events") }}
       <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">{{ .Params.summary.heading }}</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-flame">
-          <img alt="" src="{{ .Params.summary.image }}">
+        <h3 class="card-story-title">{{ .Params.rename.heading }}</h3>
+        <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
+          <img alt="" src="{{ .Params.rename.image }}">
         </div>
-        <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.summary.text }}</a>
+        <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.rename.text }}</a>
       </div>
       {{ end }}
     </div>
@@ -86,7 +86,7 @@
 
   
     {{ if .Params.section }}
-    <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+    <section class="section bg-rc-dream pre-footer-withcityscape edge edge-top edge-rc-dream-top">
       <div class="container">
         <div class="content">
           <h2>{{ .Params.section.heading }}</h2>
