donate header button (#17)

--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -16,7 +16,7 @@
           <li><a href="/how-it-works/">How it works</a></li>
           <li><a href="/how-to-apply/">How to apply</a></li>
           <li><a href="/get-involved/">Get involved</a></li>
-          <li class="header-nav-donate"><a class="button" href="https://www.justgiving.com/campaign/realchangerochdale" target="_blank">Donate</a></li>
+          <li class="header-nav-donate"><a class="button" href="https://www.gofundme.com/real-change-oldham?sharetype=teams&member=2251952&rcid=r01-155914057966-ac6e2204b53445d6&pc=ot_co_campmgmt_w" target="_blank">Donate</a></li>
         </ul>
       </nav>
       {{ if .hero }}
