--- a/hugo/layouts/events/events.html
+++ b/hugo/layouts/events/events.html
@@ -25,11 +25,11 @@
       <div class="home-stories-body">
   {{ range (where .Site.RegularPages.ByDate.Reverse "Section" "events") }}
   <div class="card-story card-stroy-witharrow">
-    <h3 class="card-story-title">{{ .Params.rename.heading }}</h3>
+    <h3 class="card-story-title">{{ .Params.summary.heading }}</h3>
     <div class="card-story-image aspect aspect-5by2 bg-rc-spark">
-      <img alt="" src="{{ .Params.rename.image }}">
+      <img alt="" src="{{ .Params.summary.image }}">
     </div>
-    <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.rename.text }}</a>
+    <a class="card-story-cta" href="{{ .Permalink }}">{{ .Params.summary.text }}</a>
   </div>
   {{ end }}
       </div>
