--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -60,8 +60,8 @@
   </section>
 
 
-<!-- {{ with .Site.GetPage "section" "events" }}{{ if eq .Params.showonhome true }}
-<section class="section getinvolved-events bg-rc-flame edge edge-top edge-rc-flame-top">
+{{ with .Site.GetPage "section" "events" }}{{ if eq .Params.showongetinvolved true }}
+<section class="section getinvolved-events bg-rc-flame edge edge-top edge-rc-spark-top">
   <div class="container">
     <div class="home-stories-header">
       <h2 class="h1 home-stories-title">
@@ -79,14 +79,17 @@
       </div>
       {{ end }}
     </div>
+    <div class="home-stories-footer text-center">
+      {{ with .Site.GetPage "section" "events" }}<a class="button" href="{{ .Params.button.url }}">{{ .Params.button.text }}</a>{{ end }}
+    </div>
   </div>
 </section>
-{{ end }}{{ end }} -->
+{{ end }}{{ end }}
 
 
   
     {{ if .Params.section }}
-    <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+    <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-dream-top">
       <div class="container">
         <div class="content">
           <h2>{{ .Params.section.heading }}</h2>
