get involved colours (#49)

--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -61,7 +61,7 @@
 
 
 {{ with .Site.GetPage "section" "events" }}{{ if eq .Params.showongetinvolved true }}
-<section class="section getinvolved-events bg-rc-flame edge edge-top edge-rc-spark-top">
+<section class="section getinvolved-events bg-rc-sunny edge edge-top edge-rc-spark-top">
   <div class="container">
     <div class="home-stories-header">
       <h2 class="h1 home-stories-title">
@@ -89,7 +89,7 @@
 
   
     {{ if .Params.section }}
-    <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-dream-top">
+    <section class="section bg-rc-candy pre-footer-withcityscape edge edge-top edge-rc-dream-top">
       <div class="container">
         <div class="content">
           <h2>{{ .Params.section.heading }}</h2>
