--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -89,7 +89,7 @@
 
   
     {{ if .Params.section }}
-    <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+    <section class="section bg-rc-moss pre-footer-withcityscape edge edge-top edge-rc-moss-top">
       <div class="container">
         <div class="content">
           <h2>{{ .Params.section.heading }}</h2>
